News UAT/force-app/main/default/objects/Project_Risk_Issue__c/Project_Risk_Issue__c.object-meta.xml
<CustomObject>
    <label>Project Risk/Issue</label>
    <nameField>
        <label>Project Risk/Issue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Risks/Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>