News UAT/force-app/main/default/objects/Project_Risk_Issue__c/fields/Customer_Owner__c.field-meta.xml
<CustomField>
    <fullName>Customer_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Risks_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>