News UAT/force-app/main/default/objects/Project_Risk_Issue__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>