News UAT/force-app/main/default/objects/Project_Risk_Issue__c/fields/Likelihood__c.field-meta.xml
<CustomField>
    <fullName>Likelihood__c</fullName>
    <label>Likelihood</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>