News UAT/force-app/main/default/objects/Project_Risk_Issue__c/fields/Project_Overview__c.field-meta.xml
<CustomField>
    <fullName>Project_Overview__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Overview</label>
    <referenceTo>Project_Overview__c</referenceTo>
    <relationshipName>R00N80000002awugEAA</relationshipName>
    <type>Lookup</type>
</CustomField>