News UAT/force-app/main/default/objects/Project_Risk_Issue__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <description>Upon closure, describe how this issue was resolved.</description>
    <inlineHelpText>Upon closure, describe how this issue was resolved.</inlineHelpText>
    <label>Resolution</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>