News UAT/force-app/main/default/objects/Project_Risk_Issue__c/fields/Risk_ID__c.field-meta.xml
<CustomField>
    <fullName>Risk_ID__c</fullName>
    <description>Unique identifier</description>
    <displayFormat>R-{0000000000}</displayFormat>
    <label>Risk ID</label>
    <type>AutoNumber</type>
</CustomField>