News UAT/force-app/main/default/objects/Project_Risk_Issue__c/fields/Risk_Mitigation_Plan__c.field-meta.xml
<CustomField>
    <fullName>Risk_Mitigation_Plan__c</fullName>
    <label>Risk Mitigation Plan</label>
    <type>TextArea</type>
</CustomField>