News UAT/force-app/main/default/objects/Project_Risk_Issue__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1) New</fullName>
            </value>
            <value>
                <fullName>2) Working</fullName>
            </value>
            <value>
                <fullName>3) Pending</fullName>
            </value>
            <value>
                <fullName>4) Monitoring</fullName>
            </value>
            <value>
                <fullName>5) Closed</fullName>
            </value>
            <value>
                <fullName>1 - New</fullName>
            </value>
            <value>
                <fullName>2 - Monitoring</fullName>
            </value>
            <value>
                <fullName>3 - Impacting Project</fullName>
            </value>
            <value>
                <fullName>4 - Closed</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Ready for Retest</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>