News UAT/force-app/main/default/objects/Project_Risk_Issue__c/recordTypes/Issue.recordType-meta.xml
<RecordType>
    <fullName>Issue</fullName>
    <active>true</active>
    <description>An Issue is an obstacle impeding progress within the work plan that is controllable and can be resolved with the right people in the right room at the right time.</description>
    <label>Issue</label>
</RecordType>