News UAT/force-app/main/default/objects/Project_Risk_Issue__c/recordTypes/Risk.recordType-meta.xml
<RecordType>
    <fullName>Risk</fullName>
    <active>true</active>
    <description>A Risk is the likelihood that an event will occur that prevent the project from be completed on time/budget.</description>
    <label>Risk</label>
</RecordType>